# rps_lab2

./: 0_input_check.h  1_main.cc  README.md
sort_lib/: CMakeLists.txt  sorting.cpp  sorting.hpp
